<resources>
    <string name="app_name">Zxplore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_card_upload">Id Card Upload</string>
    <string name="passport_upload">Passport upload</string>
    <string name="utility_bill_upload">Utility Bill Upload</string>
    <string name="signatory">Signatory</string>
    <string name="clear">Clear</string>
    <string name="no_account_message">You haven’t created an account yet</string>
    <string name="save_account_error_sub"><![CDATA[Save an account & it will show up here]]></string>
    <string name="saved">Saved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="rejected_info">These are accounts that have been rejected due to processing errors.</string>
    <string name="completed_info">This is a status to show users that have completed their account creation.</string>
    <string name="completed">Completed</string>
    <string name="pending_info">This is for accounts that are pending..</string>
    <string name="saved_info">This is for accounts that have been saved but not completed.</string>
    <string name="account_information">Account Information</string>
    <string name="account_holder_type">Account Holder type</string>
    <string name="account_type">Account Type</string>
    <string name="risk_rank">Risk Rank</string>
    <string name="account_category">Account Category</string>
    <string name="personal_information">Personal Information</string>
    <string name="title">Title</string>
    <string name="surname">Surname</string>
    <string name="bvn">BVN</string>
    <string name="first_name">First Name</string>
    <string name="other_name">Other Name</string>
    <string name="mother_s_maiden_name">Mother\'s Maiden Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="state_of_origin">State of Origin</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="contact_details">Contact Details</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="country_of_residence">Country of Residence</string>
    <string name="state_of_residence">State of Residence</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender</string>
    <string name="city_of_residence">City of Residence</string>
    <string name="means_of_identification">Means of Identification</string>
    <string name="issuer">Issuer</string>
    <string name="id_issuer">ID Issuer</string>
    <string name="Id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="id_place_of_issue">ID Place of Issue</string>
    <string name="id_issue_date">ID Issue Date</string>
    <string name="kindly_sign_your_signature_in_the_space_provided_above">Kindly sign in the space provided above</string>
    <string name="submit_form">Submit Form</string>
    <string name="saving_aspire">ASPIRE SAVINGS ACCOUNT</string>
    <string name="saving_diaspora">DIASPORA ACCOUNT-SAVINGS</string>
    <string name="saving_diaspora_aspire">DIASPORA ASPIRE SAVINGS ACCOUNT</string>
    <string name="saving_eazysave_classic">EAZYSAVE CLASSIC SAVING ACCOUNT</string>
    <string name="saving_eazysave_plus">EAZYSAVE PLUS ACCOUNT</string>
    <string name="saving_eazysave_premium">EAZYSAVE PREMIUM SAVING ACCOUNT</string>
    <string name="saving_salary">SALARY SAVINGS ACCT</string>
    <string name="saving_acct">SAVINGS ACCT</string>
    <string name="city_aba">ABA</string>
    <string name="city_abakaliki">ABAKALIKI</string>
    <string name="city_abeokuta">ABEOKUTA</string>
    <string name="city_abuja">ABUJA</string>
    <string name="city_ado_ekiti">ADO EKITI</string>
    <string name="city_agbor">AGBOR</string>
    <string name="city_akure">AKURE</string>
    <string name="city_alaba">ALABA</string>
    <string name="city_anthony">ANTHONY</string>
    <string name="city_asaba">ASABA</string>
    <string name="city_auchi">AUCHI</string>
    <string name="city_awka">AWKA</string>
    <string name="city_bauchi">BAUCHI</string>
    <string name="city_benin">BENIN</string>
    <string name="city_benin_kebbi">BIRNIN-KEBBI</string>
    <string name="city_calabar">CALABAR</string>
    <string name="city_coker">COKER</string>
    <string name="city_damaturu">DAMATURU</string>
    <string name="city_dutse">DUTSE</string>
    <string name="city_enugu">ENUGU</string>
    <string name="city_festac">FESTAC</string>
    <string name="city_gombe">GOMBE</string>
    <string name="city_gusau">GUSAU</string>
    <string name="city_ibadan">IBADAN</string>
    <string name="city_ikeja">IKEJA</string>
    <string name="city_ikoyi">IKOYI</string>
    <string name="city_ilorin">ILORIN</string>
    <string name="city_ilupeju">ILUPEJU</string>
    <string name="city_isolo">ISOLO</string>
    <string name="city_jalingo">JALINGO</string>
    <string name="city_jos">JOS</string>
    <string name="city_kaduna">KADUNA</string>
    <string name="city_kano">KANO</string>
    <string name="city_katsina">KATSINA</string>
    <string name="city_kwale">KWALE</string>
    <string name="city_lafia">LAFIA</string>
    <string name="city_lagos">LAGOS</string>
    <string name="city_lokoja">LOKOJA</string>
    <string name="city_maidugiri">MAIDUGIRI</string>
    <string name="city_mararaba">MARARABA</string>
    <string name="city_markurdi">MARKURDI</string>
    <string name="city_minna">MINNA</string>
    <string name="city_nnewi">NNEWI</string>
    <string name="city_nsukka">NSUKKA</string>
    <string name="city_ogba">OGBA</string>
    <string name="city_ojo">OJO</string>
    <string name="city_onitsha">ONITSHA</string>
    <string name="city_oshodi">OSHODI</string>
    <string name="city_oshogbo">OSHOGBO</string>
    <string name="city_owerri">OWERRI</string>
    <string name="city_oyingbo">OYINGBO</string>
    <string name="city_p_h">PORT HARCOURT</string>
    <string name="city_sapele">SAPELE</string>
    <string name="city_sokoto">SOKOTO</string>
    <string name="city_surulere">SURULERE</string>
    <string name="city_ughelli">UGHELLI</string>
    <string name="city_umuahia">UMUAHIA</string>
    <string name="city_uyo">UYO</string>
    <string name="city_vi">VICTORIA ISLAND</string>
    <string name="city_warri">WARRI</string>
    <string name="city_yaba">YABA</string>
    <string name="city_yenagoa">YENAGOA</string>
    <string name="city_yola">YOLA</string>
    <string name="occupation_accountant">ACCOUNTANT</string>
    <string name="occupation_business_trader">BUSINESS / TRADER</string>
    <string name="occupation_administrator">ADMINISTRATOR</string>
    <string name="occupation_architect">ARCHITECT</string>
    <string name="occupation_banker">BANKER</string>
    <string name="occupation_beautician">BEAUTICIAN</string>
    <string name="occupation_caterer">CATERER</string>
    <string name="occupation_civil_servant">CIVIL SERVANT</string>
    <string name="occupation_cleric">CLERIC</string>
    <string name="occupation_communication_technologist">COMMUNICATION TECHNOLOGIST</string>
    <string name="occupation_educationist">EDUCATIONIST</string>
    <string name="occupation_engineer">ENGINEER</string>
    <string name="occupation_farmer">FARMER</string>
    <string name="occupation_fashion_designer">FASHION DESIGNER</string>
    <string name="occupation_financial_service_consultant">FINANCIAL SERVICES CONSULTANT</string>
    <string name="occupation_horologist">HOROLOGIST</string>
    <string name="occupation_horticulturist">HORTICULTURIST</string>
    <string name="occupation_info_tech">INFORMATION TECHNOLOGIST</string>
    <string name="occupation_journalist">JOURNALIST</string>
    <string name="occupation_legal_practitioner">LEGAL PRACTITIONER</string>
    <string name="occupation_management_consultant">MANAGEMENT CONSULTANT</string>
    <string name="occupation_medical_practioner">MEDICAL PRACTITIONER</string>
    <string name="occupation_merchant">MERCHANT</string>
    <string name="occupation_military">MILITARY PERSONNEL</string>
    <string name="occupation_pilot">PILOT</string>
    <string name="occupation_sailor">SAILOR</string>
    <string name="occupation_scientist">SCIENTIST</string>
    <string name="occupation_secretary">SECRETARY</string>
    <string name="occupation_student">STUDENT</string>
    <string name="occupation_system_analyst">SYSTEM ANALYST</string>
    <string name="occupation_transporter">TRANSPORTER</string>
    <string name="occupation_import">IMPORTER AND EXPORTER</string>
    <string name="occupation_surveyor">SURVEYOR</string>
    <string name="occupation_artist">ARTISTE / ENTERTAINMENT</string>
    <string name="occupation_musician">MUSICIAN</string>
    <string name="occupation_teacher_lecturer">TEACHER / LECTURER</string>
    <string name="occupation_others">OTHERS</string>
    <string name="occupation_advertiser">ADVERTISING &amp; MARKETING</string>
    <string name="occupation_hotel">HOTEL AND TOURISM</string>
    <string name="occupation_insurance">INSURANCE BROKER</string>
    <string name="occupation_photographer">PHOTOGRAPHIC SERVICES</string>
    <string name="occupation_phamacist">PHARMACIST</string>
    <string name="occupation_public_office">PUBLIC OFFICE HOLDER</string>
    <string name="state_abia">ABIA</string>
    <string name="state_adamawa">ADAMAWA</string>
    <string name="state_akwa_ibom">AKWA-IBOM</string>
    <string name="state_anambra">ANAMBRA</string>
    <string name="state_bauchi">BAUCHI</string>
    <string name="state_benue">BENUE</string>
    <string name="state_borno">BORNO</string>
    <string name="state_bayelsa">BAYELSA</string>
    <string name="state_cross_river">CROSS-RIVER</string>
    <string name="state_delta">DELTA</string>
    <string name="state_ebonyi">EBONYI</string>
    <string name="state_edo">EDO</string>
    <string name="state_ekiti">EKITI</string>
    <string name="state_enugu">ENUGU</string>
    <string name="state_fct">FCT</string>
    <string name="state_gombe">GOMBE</string>
    <string name="state_imo">IMO</string>
    <string name="state_jigawa">JIGAWA</string>
    <string name="state_kebbi">KEBBI</string>
    <string name="state_kaduna">KADUNA</string>
    <string name="state_kogi">KOGI</string>
    <string name="state_kano">KANO</string>
    <string name="state_katsina">KATSINA</string>
    <string name="state_kwara">KWARA</string>
    <string name="state_lagos">LAGOS</string>
    <string name="state_niger">NIGER</string>
    <string name="state_nassarawa">NASSARAWA</string>
    <string name="state_ogun">OGUN</string>
    <string name="state_ondo">ONDO</string>
    <string name="state_osun">OSUN</string>
    <string name="state_oyo">OYO</string>
    <string name="state_plateau">PLATEAU</string>
    <string name="state_rivers">RIVERS</string>
    <string name="state_sokoto">SOKOTO</string>
    <string name="state_taraba">TARABA</string>
    <string name="state_yobe">YOBE</string>
    <string name="state_zamfara">ZAMFARA</string>
    <string name="title_miss">Miss</string>
    <string name="title_dr">Dr.</string>
    <string name="title_prof">Prof.</string>
    <string name="title_rev">Rev.</string>
    <string name="title_chief">Chief</string>
    <string name="title_mr">Mr.</string>
    <string name="title_barrister">Barrister</string>
    <string name="title_pastor">Pastor</string>
    <string name="title_otunba">Otunba</string>
    <string name="title_mrs">Mrs</string>
    <string name="title_engr">Engr</string>
    <string name="title_alhaji">Alhaji</string>
    <string name="title_alhaja">Alhaja</string>
    <string name="title_mr_mrs">Mr &amp; Mrs</string>
    <string name="title_dr_mrs">Dr. &amp; Mrs.</string>
    <string name="title_hon_just">Hon Just.</string>
</resources>