<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    android:paddingTop="40dp"
    tools:context=".fragment.form.SignatoryFragment">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signatory"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <com.kyanogen.signatureview.SignatureView xmlns:sign="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signature_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            sign:backgroundColor="@color/colorPrimaryDark"
            sign:enableSignature="true"
            sign:penColor="#000000"
            sign:penSize="5dp" />

        <ImageView
            android:id="@+id/signature_preview"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/emptySubTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/kindly_sign_your_signature_in_the_space_provided_above"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="#60000000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_form_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/submit_form"
        android:layout_height="wrap_content" />

</LinearLayout>